--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/* 
 html, body {
   overflow-x: hidden;
 
 }
 body {
   position: relative
-}
+} */
 
 .App-header {
   background-color: #282c34;
